Fix max-height to 450px for square art on small screens

--- a/public/styles.css
+++ b/public/styles.css
@@ -64,7 +64,7 @@ h3 {
 
 @media (max-width: 768px) {
   interactive-art {
-    max-height: 100vw !important;
+    max-height: 450px !important;
   }
 }
 
